# CV-K4a

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  calibration.txt
examples/: CMakeLists.txt  calibration.cpp  dft.cpp  gaussian.cpp  io.cpp  split.cpp  streaming.cpp
examples/01/: CMakeLists.txt  show.cpp  show_img.cpp
examples/02/: CMakeLists.txt  io.cpp
examples/03/: CMakeLists.txt  split.cpp
examples/04/: CMakeLists.txt  dft.cpp
examples/05/: CMakeLists.txt  gaussian.cpp
examples/06/: CMakeLists.txt  streaming.cpp
examples/07/: CMakeLists.txt  calibrate.cpp  chessboard.h  parameters.h
examples/08/: CMakeLists.txt  aruco.cpp
examples/example-00-transform/: CMakeLists.txt  transform.cpp
examples/example-01-basic/: show.cpp
examples/example-01-show/: CMakeLists.txt  show.cpp
examples/example-02-io/: CMakeLists.txt  io.cpp
examples/example-03-split/: CMakeLists.txt  split.cpp
examples/example-04-dft/: CMakeLists.txt  dft.cpp
examples/example-05-gaussian/: CMakeLists.txt  gaussian.cpp
examples/example-06-stream/: CMakeLists.txt
examples/example-06-streaming/: streaming.cpp
examples/example-07-calibrate-camera/: CMakeLists.txt  calibrate.cpp
examples/example-07-homography/: homography.cpp
examples/example-08-aruco/: aruco.cpp
examples/example-08-calibrate-camera/: CMakeLists.txt  calibrate.cpp
examples/example-09-homography/: CMakeLists.txt
examples/example-09-undistort-camera/: undistort.cpp
examples/example-10-calibrate-projector-1/: CMakeLists.txt  calibrate.cpp
examples/example-10-find-aruco/: CMakeLists.txt  aruco.cpp
examples/example-11-calibrate-projector/: CMakeLists.txt  calibrate.cpp
examples/example-11-calibrate-projector-2/: CMakeLists.txt
examples/example-12-calibrate-projector-3/: CMakeLists.txt  calibrate.cpp
examples/example-12-undistort-projector/: undistort.cpp
examples/example-13-subtract/: CMakeLists.txt  subtract.cpp
examples/example-13-subtraction/: CMakeLists.txt  subtraction.cpp
examples/example-13-undistort-camera/: CMakeLists.txt  undistort.cpp
examples/example-14-crop/: CMakeLists.txt  crop.cpp
examples/example-14-undistort-projector/: CMakeLists.txt
examples/example-15-flux-aoe/: CMakeLists.txt  flux.cpp
examples/example-16-reproject/: CMakeLists.txt  reproject.cpp
examples/example-17-icons/: icons.cpp
examples/example-17-load-icons/: CMakeLists.txt  icons.cpp
include/: projector.h
libs/calibration/: .gitignore
libs/calibration/include/: camera.h  chessboard.h  file.h  markers.hpp  usage.h
libs/calibration/src/: camera.cpp  chessboard.cpp  file.cpp  usage.cpp
libs/kinect/include/: kinect.h  ply.h
libs/kinect/src/: kinect.cpp  ply.cpp
libs/logger/: logger.h
libs/pcloud/include/: pcloud.h
libs/pcloud/src/: pcloud.cpp
libs/point/include/: axis.h  point.h
libs/point/src/: axis.cpp  point.cpp
libs/scene/include/: scene.h
libs/utility/include/: io.h
libs/utility/src/: io.cpp
output/: calibration.txt
output/calibration/: camera.txt  projector.txt
output/calibration/projector/: calibration.txt
output/calibration/samples/: camera.txt
scripts/: README.md  build_3dintac_toolkit.sh  dependencies.txt  execute.sh  initialize_azure_kinect_sensor_sdk.sh  install_depthengine.sh  install_kinect_sdk_dependencies.sh  install_usb_rules.sh
src/: aop.h  aruco.h  calibration.cpp  camera.h  chessboard.h  dft.txt  gaussian.cpp  hom.cpp  icon.h  io.cpp  main.cpp  main_OS.cpp  parameters.h  pcloud.cpp  pcloud.hpp  procam-calibration-helpers.cpp  projector.h  scene.h  split.cpp  streaming.cpp  temp.cpp
