add_subdirectory(example-01-basic)
add_subdirectory(example-02-io)
add_subdirectory(example-03-split)
add_subdirectory(example-04-dft)
add_subdirectory(example-05-gaussian)
add_subdirectory(example-06-streaming)
add_subdirectory(example-07-calibrate-camera)
add_subdirectory(example-07-calibrate-projector)
add_subdirectory(example-08-aruco)
add_subdirectory(example-09-homography)
