add_subdirectory(example-00-transform)
add_subdirectory(example-01-show)
add_subdirectory(example-02-io)
add_subdirectory(example-03-split)
add_subdirectory(example-04-dft)
add_subdirectory(example-05-gaussian)
add_subdirectory(example-06-streaming)
add_subdirectory(example-07-calibrate-camera)
add_subdirectory(example-08-aruco)
add_subdirectory(example-09-homography)
add_subdirectory(example-10-calibrate-projector-1)
add_subdirectory(example-11-calibrate-projector-2)
add_subdirectory(example-12-calibrate-projector-3)
add_subdirectory(example-13-undistort-camera)
add_subdirectory(example-14-undistort-projector)
