add_subdirectory(example-00-transform)
add_subdirectory(example-01-show)
add_subdirectory(example-02-io)
add_subdirectory(example-03-split)
add_subdirectory(example-04-dft)
add_subdirectory(example-05-gaussian)
add_subdirectory(example-06-stream)
add_subdirectory(example-07-homography)
add_subdirectory(example-08-calibrate-camera)
add_subdirectory(example-09-undistort-camera)
add_subdirectory(example-10-find-aruco)
add_subdirectory(example-11-calibrate-projector)
add_subdirectory(example-12-undistort-projector)
